# rust_greedy_set_cover

./: .gitignore  Cargo.toml  Makefile  README.md  justfile
crates/setcover-core/: Cargo.toml
crates/setcover-core/src/: lib.rs
py-setcover/: Cargo.toml  Makefile  README.md  example.py  pyproject.toml
py-setcover/setcover/: __init__.py
py-setcover/src/: lib.rs
py-setcover/tests/: test_bindings.py
rust/: Cargo.toml  Makefile  README.md
rust/examples/: benchmark.rs
rust/scripts/: r_benchmark.r
rust/scripts/benchmark/: benchmark.rs  make_data.r  r_benchmark.r
rust/src/: greedy_set_cover.rs  lib.rs  main.rs
scripts/benchmark/: README.md  make_data.r  time_py.py  time_r.r
src/: greedy_set_cover.rs  main.rs  simulate.rs
