[package]
name = "setcover-lib"
version = "0.1.0"
authors = ["Matthias Kaeding <kaedingmatthias@gmail.com>"]
edition = "2021"

[lib]
name = "setcover_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
bitvec = "1"
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311"] }

[dev-dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.21.2" }


[build-dependencies]
pyo3-build-config = "0.21"
