[package]
name = "setcover-lib"
version = "0.1.0"
authors = ["Matthias Kaeding <kaedingmatthias@gmail.com>"]
edition = "2021"

[lib]
name = "setcover_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
bitvec = "1"
pyo3 = { version = "0.21.2", features = ["abi3-py311"], optional = true }
cffi = "0.1.7"
[dev-dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
# The tests don't use pyo3, so we don't need it here.

[build-dependencies]
pyo3-build-config = "0.21"

[features]
extension-module = ["dep:pyo3", "pyo3/extension-module"]
